Pin amplify cli

--- a/amplify.yml
+++ b/amplify.yml
@@ -5,6 +5,7 @@ backend:
       commands:
         - nvm install 14
         - nvm use 14
+        - npm install -g @aws-amplify/cli@6.3.1
     build:
       commands:
         - amplifyPush --simple
